<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CDPSN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="loginpage">用户登陆</string>
    <string name="regpage">用户注册</string>
    <string name="idhint">帐号/邮箱</string>
    <string name="pwdhint">登录密码</string>
    <string name="loginbtn">登录</string>
    <string name="regbtn">注册</string>
    <string name="regcheck">我已阅读并同意</string>
    <string name="rembpwd">记住密码</string>
    <string name="newreg">注册新用户</string>
    <string name="rega">残障人士会员注册</string>
    <string name="regb">个人会员注册</string>
    <string name="regtk">中国残疾人服务网用户服务条款</string>
    <string name="nickname">昵称</string>
    <string name="checknum">验证码</string>
    <string name="name">姓名</string>
    <string name="card">残疾证号码</string>
    <string name="username">用户名</string>
    <string name="pwd">密码</string>
    <string name="checkpwd">密码确认</string>
    <string name="tab1">资讯</string>
    <string name="tab2">就业创富</string>
    <string name="tab3">服务机构</string>
    <string name="tab4">政策法规</string>
    <string name="email">邮箱</string>
    <string name="title_activity_areg">AregActivity</string>
    <string name="title_activity_breg">BregActivity</string>
    <string name="ywjj">要闻聚焦</string>
    <string name="zt">专题</string>
    <string name="tbgz">特别关注</string>
    <string name="from">您所在的城市</string>
    <string name="welcome">欢迎您</string>
    <string name="location">杭州</string>
    <string name="change">切换</string>
    <string name="zwtj">职位推荐</string>
    <string name="grjlgl">个人简历管理</string>
    <string name="gwss">岗位搜索</string>
    <string name="ckysqzw">查看已申请职位</string>
    <string name="ckysczw">查看已收藏职位</string>
    <string name="teach">教育</string>
    <string name="kf">康复</string>
    <string name="jy">就业</string>
    <string name="search">搜索</string>
    <string name="lxfs">联系方式:</string>
    <string name="wq">维权</string>
    <string name="province">省份</string>
    <string name="bzf">保障法</string>
    <string name="kfyl">康复医疗</string>
    <string name="jyjy">教育就业</string>
    <string name="shbz">社会保障</string>
    <string name="qywh">权益维护</string>
    <string name="whty">文化体育</string>
    <string name="more_data">更多数据</string>
    <string name="load_more">加载更多</string>
    <string name="title_activity_jobsearch">JobsearchActivity</string>
    <string name="title_activity_resume">ResumeActivity</string>
    <string name="phone">手机</string>
    <string name="qq">QQ</string>
    <string name="msn">MSN</string>
    <string name="keyword">输入关键字</string>
    <string name="saveres">保存简历</string>
    <string name="nowlive">现居住地</string>
    <string name="wishwork">期望工作地区</string>
    <string name="changehead">更换头像</string>
    <string name="title_activity_web">WebActivity</string>
    
      <string name="title_news_category_tops">头条</string>
    <string name="title_news_category_sport">体育</string>
    <string name="title_news_category_play">娱乐</string>
    <string name="title_news_category_finance">财经</string>
    <string name="title_news_category_science">科技</string>
    <string name="title_news_category_more">更多</string>
    
    <string name="news_top_left_text">新闻</string>
    <string name="topic_top_left_text">话题</string>
    <string name="picture_top_left_text">图片</string>
    <string name="follow_top_left_text">跟帖</string>
    <string name="vote_top_left_text">投票</string>
    
    <string name="des_img_netease_top">显示主图标</string>
     <string name="des_img_netease_weather">显示天气图标</string>
    
    <string name="title_activity_text">TextActivity</string>
    <string name="tkarea">  中国残疾人服务网提醒您：在使用本站点各项服务前，请务必仔细阅读并理解本协议

    一．总则
    1.1 同意遵守本协议及所有板块规则后方可成为中国残联网站用户。一旦注册成功，您与本网站之间自动形成协议关系，须受本协议及所有板块规则的约束。
    1.2 本协议根据中国残疾人服务网运营情况随时更新，中国残疾人服务网不承担通知义务，请您在使用时密切关注。

    二．帐户
    2.1 您注册的帐号如果出现以下情况，中国残疾人服务网将有权禁止您在本网站的一切活动。
    以党和国家领导人的真实姓名或音近名称注册； 　　 
    以国家机构或其他机构的名称注册；
    以残疾人服务、残疾人信息等相关或相近名称注册；
    以含有恶意人身攻击或淫秽字眼的名称注册；
    以“版主”、“超级版主”、“管理员”“工作人员”等名称注册；
    以机器手段批量注册。
    2.3 您有义务保证个人帐号和密码的安全，因保管不当引起的任何损失或损害，中国残疾人服务网不承担任何责任。

    三．使用
    3.1 欢迎您随时进入中国残疾人服务网参与交流、讨论和活动，但如果您在本网站发布、转载、传送含有任何下列内容的信息，中国残疾人服务网将有权自行处理：
    （1）煽动抗拒、破坏宪法和法律、行政法规实施的；
    （2）煽动颠覆国家政权，推翻社会主义制度的；
    （3）煽动分裂国家、破坏国家统一的；
    （4）煽动民族仇恨、民族歧视，破坏民族团结的；
    （5）捏造或者歪曲事实，散布谣言，扰乱社会秩序的；
    （6）宣扬封建迷信、淫秽、色情、赌博、暴力、凶杀、恐怖、教唆犯罪的；
    （7）公然侮辱他人或者捏造事实诽谤他人的，或者进行其他恶意攻击的；
    （8）损害国家机关信誉的；
    （9）其他违反宪法和法律行政法规的；
    （10）在未经过中国残疾人服务网授权的情况下进行商业广告行为的。
    （11）含有法律、行政法规禁止的其他内容的。 

    四、隐私 
    4.1 为了向您提供更好的用户服务，请您在注册时及时、详尽、准确地提供个人资料，并不断更新补充。如果因注册信息不真实出现任何问题，由您自行承担相应的后果。
    4.2 中国残疾人服务网非常重视对您个人隐私的保护，承诺不对外公开或向第三方提供用户的注册信息和在本网站的相关使用情况。但以下几种特殊情况除外：
    （1）得到了您的授权许可；
    （2）只有透露您的个人资料，才能提供您所要求的产品和服务；
    （3）根据有关的法律法规要求；
    （4）按照相关政府主管部门的要求；
    （5）为维护中国残疾人服务网的合法权益。
    （6）为维护公共安全。

    五、版权
    5.1 中国残疾人服务网所有文字、图片、音频、视频等版权均归本网站享有或本网站与作者共同享有，未经本网站许可，不得任意转载。
    5.2 中国残疾人服务网LOGO标识、吉祥物、所有网站产品设计及编排方式等版权均属本网站享有，未经本网站许可，不得任意复制转载。 
    5.3 您在中国残疾人服务网发布的任何原创内容，请自行在发布内容中标注“原创”或“未经同意不得转载”等说明，如您在中国残疾人服务网发布的任何原创内容，出现被他人私自转载等情况，中国残疾人服务网不承担责任。
    5.4  您须承诺在中国残疾人服务网发表的所有信息均享有合法版权或已经得到版权拥有人的授权，不得侵害他人合法权利。一旦权利人提出异议并提供书面通知和有效的证明资料后，中国残疾人服务网有权立即删除该信息。如因违反本条规定造成实质侵权的，将由用户个人承担相关法律责任和赔偿费用。
    5.5 本网站所有内容仅代表作者自己的立场和观点，并不代表中国残疾人服务网立场。
    5.6 恶意转载本网站内容的，中国残疾人服务网将保留对其提出法律诉讼的权利。

    六、免责
    除上述内容所涉及条款外，出现以下情况时中国残疾人服务网将不承担任何责任：
    6.1 因不可抗力或中国残疾人服务网不能控制的原因（含系统升级和维护）而造成的网络服务中断、数据丢失或其他缺陷。但中国残疾人服务网承诺将竭尽所能减少因此而给您带来的损失和影响。
    6.2 您在中国残疾人服务网发布对商家、单位及其他个人等的投诉信息，并由此产生争议和纠纷的。
    6.3 您在中国残疾人服务网发布个人或他人真实信息，并由此产生纠纷和伤害的。
    6.4 您使用出现在中国残疾人服务网的外部链接、QQ群号、QQ、IM、MSN等信息，参加其他用户个人组织的活动或与其他用户进行个人交易并由此发生纠纷和其他伤害的。
    6.5 您使用出现在中国残疾人服务网中第三方输入的，不是本网发布的材料，并由此产生争议、纠纷和其他伤害的。
    6.6 您在中国残疾人服务网发布的除前述范围以外的其它信息，并由此产生纠纷和伤害的。

    七、附则 
    7.1 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。 
    7.2 中国残疾人服务网www. .com的所有权和运营权归中国残联信息中心所有。
    7.3 本协议解释权及修订权归中国残联信息中心所有。

  《中国残疾人服务网实名用户个人协议》
   为加强对中国残疾人服务网信息安全的管理，规范中国残疾人服务网信息发布及用户上网行为。
   一、中国残疾人服务网用户必须：
   （1）请您在注册时及时、详尽、准确地提供个人资料，并不断更新补充。
   （2）用户必须遵守国家法律法规，严格执行安全保密制度，不得发布含有法律、行政法规禁止的信息内容，并对所发布的信息负责。
   （3）用户必须保管好的自己的上网帐号和密码。
   （4）用户有义务向公安机关举报网络上的违法行为和违法信息。
   （5）用户必须遵守以上所有规定，否则信息网络中心有权停用该帐号，并依法通知公安机关。

   二、网站义务
    1、中国残疾人服务网非常重视对您个人隐私的保护，承诺不对外公开或向第三方提供用户的注册信息和在本网站的相关使用情况。但以下几种特殊情况除外：
   （1）得到了您的授权许可；
   （2）只有透露您的个人资料，才能提供您所要求的产品和服务；
   （3）根据有关的法律法规要求；
   （4）按照相关政府主管部门的要求；
   （5）为维护中国残疾人服务网的合法权益。
   （6）为维护公共安全。

   三、其他事项
   1、如果中国残疾人服务网用户因注册信息不真实出现任何问题，由您自行承担相应的后果。
   2、国务院信息办、公安部、国家安全部等部门颁布的相关网络管理条例和文件精神。上述条款中第一条第二款中所指的法律、行政法规所禁止的信息包括反对宪法所确定的基本原则的；危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；损害国家荣誉和利益的；煽动民族仇恨、民族歧视，破坏民族团结的；破坏国家宗教政策，宣扬邪教和封建迷信的；散布谣言，扰乱社会秩序，破坏社会稳定的；散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；侮；以及含有法律、行政法规禁止的其他内容的信息内容。
   3、中国残疾人服务网用户帐号严禁转让或借予他人使用，避免他人使用自己帐号上网从事违法行为，否则后果自负。
   4、利用中国残疾人服务网开展应用网络服务和利用中国残疾人服务网发布信息，皆适用本规定。本通知所称网络服务，包含但不限于在中国残疾人服务网上以网页、电子邮件、个人主页、电子公告牌(BBS)、论坛、聊天室、留言板、FTP、搜索引擎、网络游戏服务器等交互形式为用户提供信息发布、文件上传下载、网络游戏、电子商务等行为。
   5、中国残疾人服务网切实执行实名注册制度，加强网络服务的用户和信息管理，随时接受监督和检查。
                                                                                                                                                               二0一一年十一月十日</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_jobinfo">JobinfoActivity</string>
    <string name="scjob">加入收藏夹</string>
    <string name="sqjob">申请该职位</string>

</resources>
