<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="348dp"
        android:layout_weight="0.86"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            android:id="@+id/pBar4"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:gravity="center" />

        <com.example.cdpsn.DragListView
            android:id="@+id/l4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="#00000000"
            android:divider="#000000"
            android:dividerHeight="1dp" >
        </com.example.cdpsn.DragListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t41"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/bzf"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/t42"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_up"
            android:gravity="center"
            android:text="@string/kfyl"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/t43"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_up"
            android:gravity="center"
            android:text="@string/jyjy"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/t44"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_up"
            android:gravity="center"
            android:text="@string/shbz"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/t45"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_up"
            android:gravity="center"
            android:text="@string/qywh"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/t46"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/button_up"
            android:gravity="center"
            android:text="@string/whty"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>